# Data_Migration_Factory

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  __init__.py  base.py  build.sh  collector.py  config_parsers.py  create_documentation.md  file_utils.py  loader.py  logger_utils.py  main.py  manager.py  mssql.py  oracle.py  pyproject.toml  pytest.ini  spark_utils.py  sqlserver_installation_docker.md  transformer.py  transformer_utils.py
