[tool.poetry]
name = "DMF"
version = "0.0.1"
description = "Framework for data migration activities"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8, <3.9.10"
PyYAML = { version = "==5.4.1", source = "pypi" }
jc = "^1.23.6"
colorlog = "^6.8.0"
pandas = "1.4.3"

[tool.poetry.group.dev.dependencies]
ipykernel = { version = "==5.3.4", source = "pypi" }
pre-commit = { version = "==2.14.0", source = "pypi" }
pydocstyle = { version = "==5.0.2", source = "pypi" }
pyspark = { version = "==3.3.1", source = "pypi" }
pyspark-test = { version = "==0.1.0", source = "pypi" }
pytest = { version = "==6.2.4", source = "pypi" }
pytest-cov = { version = "==2.12.1", source = "pypi" }
pytest-docker = { version = "==0.10.1", source = "pypi" }
pytest-env = { version = "==0.6.2", source = "pypi" }
pytest-html = { version = "==2.0.1", source = "pypi" }
pytest-mock = { version = "==1.12.1", source = "pypi" }
pytest-spark = { version = "==0.5.2", source = "pypi" }
pytest-xdist = { version = "==2.3.0", source = "pypi" }
rope = { version = "==0.17.0", source = "pypi" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
